fix 404 graphic size on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -517,6 +517,7 @@ section.work-next-section {
   top: 0;
   left: 0;
   animation: bounce linear 20s infinite;
+  width: 23vw;
 }
 @keyframes bounce {
   0% {
